# todo-konsole

./: CMakeLists.txt  README.md  main.cpp  truncate.hpp
